--- a/01 script.ipynb
+++ b/01 script.ipynb
@@ -149,18 +149,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello\n",
-      "Hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for _ in range(2):   # _ is used for a discard\n",
     "  print(\"Hello\")"
@@ -231,6 +222,7 @@
     "letters2 = list(string.ascii_lowercase)\n",
     "print(letters2)\n",
     "\n",
+    "help(string)\n",
     "\n",
     "# What does mean?\n",
     "# for letter in letters[::-1]\n",
@@ -305,18 +297,328 @@
    "source": [
     "# What about linq?\n",
     "# select aka map,  from,  where\n",
+    "[letter for letter in letters]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "[letter for letter in letters]\n",
-    "[letter.upper() for letter in letters]\n",
-    "[letter.upper() for letter in letters if letter < 'm']\n",
-    "[letter.upper() for letter in letters[::-1] if letter < 'm']\n",
-    "\n",
+    "[letter.upper() for letter in letters]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[letter.upper() for letter in letters if letter < 'm']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[letter.upper() for letter in letters[::-1] if letter < 'm']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# But we calculate letter.upper() twice\n",
-    "[letter.upper() for letter in letters if letter.upper() < 'M']\n",
+    "[letter.upper() for letter in letters if letter.upper() < 'M']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# := is called the walrus operator\n",
     "[l for letter in letters if (l := letter.upper()) < 'M']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Nested\n",
+    "words = [\"hello\", \"world\", \"this\", \"is\", \"a\", \"sentence\"]\n",
+    "[letter for word in words for letter in word]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "a_dict = { \"David\": \"York\",\n",
+    "           \"Kevin\": \"London\" }\n",
+    "\n",
+    "len(a_dict)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "a_dict[\"David\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if \"David\" in a_dict:\n",
+    "  print(\"David is in the dictionary\")\n",
+    "\n",
+    "\n",
+    "if \"Frank\" not in a_dict:\n",
+    "  print(\"Frank is NOT in the dictionary\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# name is the key\n",
+    "for name in a_dict:\n",
+    "  print(name, a_dict[name])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for name, city in a_dict.items():\n",
+    "  print(name, city)\n",
+    "\n",
+    "for nc in a_dict.items():\n",
+    "  print(type(nc))\n",
+    "\n",
+    "# It's a tuple!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# This returns a list,  but I want a dictionary\n",
+    "a_list = [letter.upper() for letter in letters if letter < 'm']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "a_dict = {letter: letter.upper() for letter in letters if letter < 'm'}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Number of A,B and Cs in this string\n",
+    "text = \"AAAAABBBCCCCAAAABBBCCCCAAABBBCCCC\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# First attempt\n",
+    "counts = dict()\n",
+    "for s in text:\n",
+    "  if s in counts:\n",
+    "    counts[s] += 1\n",
+    "  else:\n",
+    "    counts[s] = 1\n",
+    "\n",
+    "print(counts)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "# Second attempt\n",
+    "from typing import DefaultDict  #Reference other modules/packages\n",
+    "counts = DefaultDict(int) # Explain\n",
+    "for s in text:\n",
+    "  counts[s] += 1\n",
+    "\n",
+    "print(counts)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Third attempt\n",
+    "\n",
+    "from collections import Counter\n",
+    "counts = Counter(text)\n",
+    "counts\n",
+    "# counts[\"A\"]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def add(a, b):        # naming convention (lower case with _)\n",
+    "  return a + b        # <- note the indentation\n",
+    "                      # Needs return keyword\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "print(add(1, 2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(add(\"Hello \",\"World\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_19640/1125593702.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"David\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_19640/702175246.py\u001b[0m in \u001b[0;36madd\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m        \u001b[1;31m# naming convention (lower case with _)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m   \u001b[1;32mreturn\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mb\u001b[0m        \u001b[1;31m# <- note the indentation\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m                       \u001b[1;31m# Needs return keyword\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "add(\"David\",1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(type(add(1, 2)))\n",
+    "print(type(add(\"David\",\"Kevin\")))"
    ]
   }
  ],
