--- a/01 script.ipynb
+++ b/01 script.ipynb
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,17 +543,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -562,17 +554,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "print(add(\"Hello \",\"World\"))\n"
@@ -580,22 +564,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"int\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_19640/1125593702.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"David\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_19640/702175246.py\u001b[0m in \u001b[0;36madd\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m        \u001b[1;31m# naming convention (lower case with _)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m   \u001b[1;32mreturn\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mb\u001b[0m        \u001b[1;31m# <- note the indentation\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m                       \u001b[1;31m# Needs return keyword\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "add(\"David\",1)\n"
@@ -603,22 +574,345 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'>\n",
-      "<class 'str'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "print(type(add(1, 2)))\n",
     "print(type(add(\"David\",\"Kevin\")))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car:\n",
+    "  pass                    # <- note the indentation.   Must have a body - hence pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class Car:\n",
+    "  # A bit like a c'tor\n",
+    "  def __init__(self, owner, colour, length_in_meters):\n",
+    "    self.owner = owner\n",
+    "    self.colour = colour\n",
+    "    self.length_in_meters = length_in_meters\n",
+    "  \n",
+    "  # All instance methods take self as the first parameter\n",
+    "  def start_engine(self):\n",
+    "    print(\"Starting engine\")\n",
+    "  \n",
+    "  def stop_engine(self):\n",
+    "    print(\"Stopping engine\")\n",
+    "\n",
+    "  # Like overloading ToString()\n",
+    "  def __str__(self):\n",
+    "    return f\"{self.owner}'s {self.colour} car\"\n",
+    "\n",
+    "  def __repr__(self) -> str:\n",
+    "    return self.owner\n",
+    "\n",
+    "  def __len__(self):\n",
+    "    return self.length_in_meters\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "davids_car = Car(\"David\", \"Red\", 2)\n",
+    "rebeccas_car = Car(\"Rebecca\", \"Blue\", 3)\n",
+    "print(davids_car.owner)\n",
+    "len(davids_car)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def break_car():\n",
+    "  print(\"Car is broken\")\n",
+    "\n",
+    "# python is dynamic\n",
+    "rebeccas_car.start_engine = break_car\n",
+    "\n",
+    "davids_car.start_engine()\n",
+    "rebeccas_car.start_engine()\n",
+    "# makes mocking easy!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# lambda syntax (can add args)\n",
+    "rebeccas_car.start_engine = lambda: print(\"Engine broken\")\n",
+    "rebeccas_car.start_engine()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# args and kwargs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A lot of methods will have this signature\n",
+    "def a_method(*args, **kwargs):\n",
+    "\n",
+    "\n",
+    "  for arg in args:\n",
+    "    print(arg)\n",
+    "\n",
+    "  for name in kwargs:\n",
+    "    print(name, kwargs[name])\n",
+    "\n",
+    "a_method(1,2,3, name=\"David\", City=\"York\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tuples and Deconstruction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def another_method(name, age):\n",
+    "  print(f\"{name} is {age}\")\n",
+    "\n",
+    "a_tuple = (\"David\", 46)\n",
+    " \n",
+    "another_method(a_tuple[0], a_tuple[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "another_method(*a_tuple)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Typing hints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def capital_letters(text):\n",
+    "  return text[0].upper() + text[1:].lower()\n",
+    "\n",
+    "print(capital_letters(\"david\"))\n",
+    "print(capital_letters(123))   # Runtime error\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# We can add a hint.  (Must be enabled in VS Code settings)\n",
+    "def capital_letters2(text: str) -> str:\n",
+    "  return text[0].upper() + text[1:].lower()\n",
+    "\n",
+    "print(capital_letters2(\"david\"))\n",
+    "print(capital_letters2(123))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Another example\n",
+    "def none_is_blank(text):\n",
+    "  if text is None:\n",
+    "    return \"\"\n",
+    "  else:\n",
+    "    return text\n",
+    "\n",
+    "name = None\n",
+    "print(none_is_blank(name))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "# What do we add for the typing hints?  str gives an error\n",
+    "def none_is_blank(text: str):\n",
+    "  if text is None:\n",
+    "    return 1\n",
+    "  else:\n",
+    "    return text\n",
+    "\n",
+    "print(none_is_blank(name))\n",
+    "\n",
+    "# Optional is really Union[None, str]\n",
+    "# Add that. (from typing import Optional)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def assign_address_to_person(person_id: int, address_id: int):\n",
+    "  print(\"Person\", person_id)\n",
+    "  print(\"Address\", address_id)\n",
+    "\n",
+    "\n",
+    "david = 1234\n",
+    "york = 5678\n",
+    "\n",
+    "assign_address_to_person(york, david)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from typing import NewType\n",
+    "\n",
+    "AddressId = NewType(\"AddressId\", int)\n",
+    "PersonId = NewType(\"PersonId\", int)\n",
+    "\n",
+    "\n",
+    "def assign_address_to_person(person_id: PersonId, address_id: AddressId):\n",
+    "  print(\"Person\", person_id)\n",
+    "  print(\"Address\", address_id)\n",
+    "\n",
+    "david = PersonId(1234)\n",
+    "york = AddressId(5678)\n",
+    "\n",
+    "assign_address_to_person(york, david)\n",
+    "\n",
+    "assign_address_to_person(david, york)\n",
+    "\n",
+    "print(type(david))\n",
+    "print(type(york))\n",
+    "\n",
+    "# Performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Interfaces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Protocol\n",
+    "\n",
+    "class DatabaseAccess(Protocol):\n",
+    "  def get_person(self, person_id: int) -> str:\n",
+    "    ...   # dots mean abstract\n",
+    "\n",
+    "# Implementation\n",
+    "class MemoryAccess():\n",
+    "  def get_person(self, person_id: int) -> str:\n",
+    "    return \"David\"\n",
+    "\n",
+    "\n",
+    "def do_something(db: DatabaseAccess, person_id: int):\n",
+    "  name = db.get_person(person_id)\n",
+    "  print(name)\n",
+    "\n",
+    "do_something(MemoryAccess(), 1234)    \n",
+    "\n",
+    "# rename get_person to get an error message\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import TypeVar\n",
+    "\n",
+    "T = TypeVar('T')\n",
+    "def coalesce(first: T, second: T) -> T:\n",
+    "  return first if first is not None else second\n",
+    "\n",
+    "# Bit limited,  as restrictions cannot be applied,  ie can't do where T is int\n"
    ]
   }
  ],
