--- a/01 script.ipynb
+++ b/01 script.ipynb
@@ -914,6 +914,397 @@
     "\n",
     "# Bit limited,  as restrictions cannot be applied,  ie can't do where T is int\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Decorators (at speed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "def six():\n",
+    "  return 6\n",
+    "\n",
+    "def double(x: int) -> int:\n",
+    "  return x * 2\n",
+    "\n",
+    "print(double(six()))\n",
+    "\n",
+    "del six\n",
+    "del double"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "# 2\n",
+    "from typing import Callable\n",
+    "\n",
+    "def six() -> int:\n",
+    "  return 6\n",
+    "\n",
+    "# Double is now a higher order function\n",
+    "def double(fn: Callable[[int], int]) -> int:\n",
+    "  return fn() * 2\n",
+    "\n",
+    "print(double(six))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "# 3 - functions can also return functions\n",
+    "def build_double_function():\n",
+    "  def double(x: int) -> int:\n",
+    "    return x * 2\n",
+    "  return build_double_function\n",
+    "\n",
+    "# Calling build_double_function() creates the double function\n",
+    "\n",
+    "print(build_double_function()(6))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#4 Getting complicated!\n",
+    "\n",
+    "def six() -> int:\n",
+    "  return 6\n",
+    "\n",
+    "def double(func):\n",
+    "  def wrapper():\n",
+    "    return func() * 2\n",
+    "  return wrapper\n",
+    "\n",
+    "double_six = double(six)\n",
+    "\n",
+    "# double_six is now a function.  Which when called will then\n",
+    "# call the supplied function (six) and then double it's result\n",
+    "print(type(double_six))\n",
+    "\n",
+    "print(double_six())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# We can now use our \"double\" function a decorator to any function.\n",
+    "# For example\n",
+    "@double\n",
+    "def seven():\n",
+    "  return 7\n",
+    "\n",
+    "print(seven())\n",
+    "\n",
+    "# A bit like attributes,  but they are functions rather than meta data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exceptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " # try -> except -> finally\n",
+    "try:\n",
+    "  print(1/0)\n",
+    "except ZeroDivisionError:\n",
+    "  print(\"Cannot divide by zero\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "  \n",
+    "# We can combine exceptions with decorators\n",
+    "def must_be_positive(func):\n",
+    "  def wrapper(a,b):\n",
+    "    result = func(a,b)\n",
+    "    if result < 0:\n",
+    "      raise Exception(f\"Result of calculation must be positive. {a} and {b} is {result}\")\n",
+    "    return result\n",
+    "  return wrapper\n",
+    "\n",
+    "\n",
+    "@must_be_positive\n",
+    "def sub(a,b):\n",
+    "  return a - b\n",
+    "\n",
+    "print(sub(10, 5))\n",
+    "print(sub(10, 50))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dataclasses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car:\n",
+    "  def __init__(self, owner, colour, length_in_meters):\n",
+    "    self.owner = owner\n",
+    "    self.colour = colour\n",
+    "    self.length_in_meters = length_in_meters\n",
+    "\n",
+    "  # def __repr__(self):\n",
+    "  #   return self.owner\n",
+    "\n",
+    "car0 = Car(\"David\", \"Red\", 2)\n",
+    "print(car0.owner)\n",
+    "print(car0)  # We haven't defined __repr__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import dataclasses\n",
+    "\n",
+    "@dataclasses.dataclass\n",
+    "class Car:\n",
+    "  owner: str\n",
+    "  colour: str\n",
+    "  length_in_meters: int\n",
+    "\n",
+    "car1 = Car(\"David\", \"Red\", 2)\n",
+    "car1.colour = \"Blue\" # This is fine\n",
+    "print(car1.owner)\n",
+    "print(car1) # Note we get __repr__ for free\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Immutable\n",
+    "@dataclasses.dataclass(frozen=True)\n",
+    "class Car:\n",
+    "  owner: str\n",
+    "  colour: str\n",
+    "  length_in_meters: int\n",
+    "\n",
+    "car1 = Car(\"David\", \"Red\", 2)\n",
+    "car1.colour = \"Blue\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Car(owner='Me', length_in_meters=2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "@dataclasses.dataclass()\n",
+    "class Car:\n",
+    "  owner: str = dataclasses.field(init=False)  # Note the types!\n",
+    "  colour: str = dataclasses.field(repr=False)  # Note the types!\n",
+    "  length_in_meters: int\n",
+    "\n",
+    "car1 = Car(\"Red\", 2)\n",
+    "car1.owner = \"Me\"\n",
+    "\n",
+    "print(car1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scoping (private/protected/public)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "1\n",
+      "10\n",
+      "1\n",
+      "12\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class BusinessLogic:\n",
+    "\n",
+    "  def __init__(self):\n",
+    "    self.__cache = {}\n",
+    "    self.cache_size = 0\n",
+    "\n",
+    "  def __add_to_cache(self, x, result):\n",
+    "      self.__cache[x] = result\n",
+    "      self.cache_size += 1\n",
+    "\n",
+    "  def double(self, x):\n",
+    "    if x in self.__cache:\n",
+    "      return self.__cache[x]\n",
+    "    else:\n",
+    "      result = x * 2\n",
+    "      self.__add_to_cache(x, result)\n",
+    "      return result\n",
+    "\n",
+    "logic = BusinessLogic()\n",
+    "print(logic.double(5))\n",
+    "print(logic.cache_size)\n",
+    "print(logic.double(5))\n",
+    "print(logic.cache_size)\n",
+    "print(logic.double(6))\n",
+    "print(logic.cache_size)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'BusinessLogic' object has no attribute '__add_to_cache'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_10948/1088800702.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlogic\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__add_to_cache\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m   \u001b[1;31m# Don't work\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;31m#print(logic.double(7))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m#print(logic.cache_size)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'BusinessLogic' object has no attribute '__add_to_cache'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "logic.__add_to_cache(7, 10)   # Don't work"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'BusinessLogic' object has no attribute '__cache'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_10948/2462400221.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlogic\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__cache\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m10\u001b[0m        \u001b[1;31m# Don't work\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'BusinessLogic' object has no attribute '__cache'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "logic.__cache[7] = 10        # Don't work"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['_BusinessLogic__add_to_cache', '_BusinessLogic__cache', '__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'cache_size', 'double']\n",
+      "14\n",
+      "3\n",
+      "10\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(dir(logic))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(logic.double(7))\n",
+    "logic._BusinessLogic__cache[7] = 10\n",
+    "print(logic.double(7))\n"
+   ]
   }
  ],
  "metadata": {
