Script 1 is complete

--- a/01 script.ipynb
+++ b/01 script.ipynb
@@ -1305,6 +1305,102 @@
     "logic._BusinessLogic__cache[7] = 10\n",
     "print(logic.double(7))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# #if directives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# When a script is first imported it is executed.  This includes creating\n",
+    "# classes and functions.  This can be quite powerful,  here is a basic\n",
+    "# example.\n",
+    "name = \"David\"\n",
+    "\n",
+    "if name == \"David\":\n",
+    "  def town():\n",
+    "    print(\"London\")\n",
+    "else:\n",
+    "  def town():\n",
+    "    print(\"Paris\")\n",
+    "\n",
+    "town()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# New Objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating instance of house\n",
+      "House at 123 Main Street\n",
+      "Creating instance of MissingHouse\n",
+      "There is no house\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "from typing import Optional\n",
+    "\n",
+    "class MissingHouse():\n",
+    "  def __str__(self):\n",
+    "    return f\"There is no house\"\n",
+    "\n",
+    "\n",
+    "class House():\n",
+    "  def __init__(self, address):\n",
+    "    self.address = address\n",
+    "\n",
+    "  def __str__(self):\n",
+    "    return f\"House at {self.address}\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "class BaseHouse():\n",
+    "  def __new__(cls, address: Optional[str]):\n",
+    "    if address is not None:\n",
+    "      print(\"Creating instance of house\")\n",
+    "      return House(address)\n",
+    "    else:\n",
+    "      print(\"Creating instance of MissingHouse\")\n",
+    "      return MissingHouse()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "h = BaseHouse(\"123 Main Street\")\n",
+    "print(h)\n",
+    "\n",
+    "h2 = BaseHouse(None)\n",
+    "print(h2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
