Improve types example

--- a/mon.ipynb
+++ b/mon.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,88 +12,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "81"
+       "2"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Start with a simple square fn.  (int to int)\n",
-    "def square(a: int) -> int:\n",
-    "  return a * a\n",
+    "# Start with a simple fn.  (str to int)\n",
+    "def count_vowels(s: str) -> int:\n",
+    "  return s.count('a') + s.count('e') + s.count('i') + s.count('o') + s.count('u')\n",
     "\n",
-    "square(9)"
+    "count_vowels(\"David\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "144"
+       "3"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# It doesn't work if a can be optional.\n",
-    "a: Optional[int] = None\n",
+    "a: Optional[str] = None\n",
     "if datetime.now().year == 2022:\n",
-    "  a = 12\n",
-    "square(a)\n",
+    "  a = \"banana\"\n",
     "\n",
-    "# (we want the square of None to be None)"
+    "count_vowels(a)  #Error\n",
+    "\n",
+    "# (we want the count_vowels of None to be None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Implement m (without any types for now)\n",
     "def m(f, a):\n",
-    "  pass"
+    "  pass\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# It works\n",
-    "m(square, a)"
+    "m(count_vowels, None)\n",
+    "m(count_vowels, \"banana\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# What if we have a list rather than an optional type?\n",
-    "l = [1, 2, 3]"
+    "l = [\"apple\", \"banana\", \"carrot\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,17 +106,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# It works\n",
-    "m2(square, l)"
+    "m2(count_vowels, l)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,9 +130,40 @@
     "  else:\n",
     "    return f(a)\n",
     "\n",
-    "def m2(f, l):\n",
-    "  return [f(x) for x in l]\n"
+    "def m2(f, a):\n",
+    "  return [f(x) for x in a]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def square(x: int) -> int:\n",
+    "  return x * x\n",
+    "\n",
+    "word = \"David\"\n",
+    "map(square,  map(count_vowels, word))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
