--- a/mon.ipynb
+++ b/mon.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "2"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,20 +36,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# It doesn't work if a can be optional.\n",
     "a: Optional[str] = None\n",
@@ -63,20 +52,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Implement m (without any types for now)\n",
     "def m(f, a):\n",
-    "  pass\n"
+    "  if a is None:\n",
+    "    return None\n",
+    "  else:\n",
+    "    return f(a)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# It works\n",
     "m(count_vowels, None)\n",
@@ -85,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,20 +98,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Implement m (without any types for now)\n",
     "def m2(f, a):\n",
-    "  pass"
+    "  return [f(x) for x in a]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 2]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# It works\n",
     "m2(count_vowels, l)"
@@ -116,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,46 +138,102 @@
     "T = TypeVar('T')\n",
     "S = TypeVar('S')\n",
     "\n",
-    "def m(f, a):\n",
-    "  if a is None:\n",
-    "    return None\n",
+    "def map(f:Callable[[T], S], a: Union[str, Error]) -> Union[str, str]:\n",
+    "  if a is Error:\n",
+    "    return a\n",
     "  else:\n",
     "    return f(a)\n",
     "\n",
-    "def m2(f, a):\n",
-    "  return [f(x) for x in a]\n"
+    "# def map(f: Callable[[T], S], a: M[T]) -> M[S]:\n",
+    "#   return [f(x) for x in a]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def square(x: int) -> int:\n",
     "  return x * x\n",
     "\n",
-    "word = \"David\"\n",
-    "map(square,  map(count_vowels, word))"
+    "word = None\n",
+    "map(square,  map(count_vowels, word))\n",
+    ", \n",
+    "word . count_vowels |> square\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "England\n",
+      "Unknown city London\n",
+      "Unknown customer Torsten\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import partial\n",
+    "from typing import NewType, Union, TypeVar, Generic\n",
+    "\n",
+    "T = TypeVar('T')\n",
+    "S = TypeVar('S')\n",
+    "\n",
+    "Error = NewType('Error', str)\n",
+    "\n",
+    "class Result(Generic[T]):\n",
+    "  def __init__(self, value: T):\n",
+    "    self.value = value\n",
+    "\n",
+    "def m(f:Callable[[S], T], inp: Union[Result[S], Error]) -> Union[Result[T], Error]:\n",
+    "  if isinstance(inp, str):\n",
+    "    return inp\n",
+    "  else:\n",
+    "    try:\n",
+    "      return Result(f(inp.value))\n",
+    "    except Exception as e:\n",
+    "      return Error(str(e))\n",
+    "\n",
+    "def lift(v: T) -> Result[T]:\n",
+    "  return Result(v)\n",
+    "\n",
+    "def bind(f:Callable[[S], T], inp: S) -> Union[Result[T], Error]:\n",
+    "  try:\n",
+    "    return Result(f(inp))\n",
+    "  except Exception as e:\n",
+    "    return Error(str(e))\n",
+    "\n",
+    "def print_result(result: Union[Result, Error]):\n",
+    "  if isinstance(result, str):\n",
+    "    print(result)\n",
+    "  else:\n",
+    "    print(result.value)\n",
+    "\n",
+    "def location(customerName: str) -> str:\n",
+    "  if customerName == \"David\":\n",
+    "    return \"York\"\n",
+    "  elif customerName == \"Matt\":\n",
+    "    return \"London\"    \n",
+    "  raise Exception(f\"Unknown customer {customerName}\")\n",
+    "\n",
+    "def country(cityName: str) -> str:\n",
+    "  if cityName == \"York\":\n",
+    "    return \"England\"\n",
+    "  raise Exception(f\"Unknown city {cityName}\")\n",
+    "\n",
+    "location2 = partial(bind, location)\n",
+    "country2 = partial(m, country)\n",
+    "\n",
+    "print_result(country2, location2(\"David\"))\n",
+    "print_result(country2, location2(\"Matt\"))\n",
+    "print_result(country2, location2(\"Torsten\"))\n"
+   ]
   }
  ],
  "metadata": {
